--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8ba3acf7-3dd3-4a98-aec4-51984907b7b3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
