--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
     "firebase-functions": "^3.14.1",
