--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/storage-angular": "^3.0.6",
     "angularfire2": "^5.4.2",
     "cordova-sqlite-storage": "^6.0.0",
+    "cors": "^2.8.5",
     "firebase": "^9.1.3",
     "rxfire": "^6.0.2",
     "rxjs": "~6.6.0",
