--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-sqlite-storage": "^6.0.0",
     "cors": "^2.8.5",
     "firebase": "^9.1.3",
+    "firebase-functions": "^3.16.0",
     "rxfire": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
